force-app/main/default/objects/Refund_Request__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Refund Requests</relationshipLabel>
    <relationshipName>Refund_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>