force-app/main/default/objects/Refund_Request__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <description>created on behalf of sfax migration</description>
    <label>Account Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>