force-app/main/default/objects/Refund_Request__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Refund Requests</relationshipLabel>
    <relationshipName>Refund_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>