force-app/main/default/objects/Refund_Request__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Refund Requests</relationshipLabel>
    <relationshipName>Refund_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>