force-app/main/default/objects/Refund_Request__c/fields/Contact_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email_Address__c</fullName>
    <label>Contact Email Address</label>
    <type>Email</type>
</CustomField>