force-app/main/default/objects/Refund_Request__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <label>Currency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AUD</fullName>
            </value>
            <value>
                <fullName>HKD</fullName>
            </value>
            <value>
                <fullName>JPY</fullName>
            </value>
            <value>
                <fullName>SGD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>