force-app/main/default/objects/Refund_Request__c/fields/Detailed_Description__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Description__c</fullName>
    <label>Detailed Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>