force-app/main/default/objects/Refund_Request__c/fields/Fax_Brand__c.field-meta.xml
<CustomField>
    <fullName>Fax_Brand__c</fullName>
    <label>Fax Brand</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>eFax</fullName>
            </value>
            <value>
                <fullName>MyFax</fullName>
            </value>
            <value>
                <fullName>MetroFax</fullName>
            </value>
            <value>
                <fullName>DOC</fullName>
            </value>
            <value>
                <fullName>eFax AU</fullName>
            </value>
            <value>
                <fullName>eFax JP</fullName>
            </value>
            <value>
                <fullName>jsign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>