force-app/main/default/objects/Refund_Request__c/fields/Fax_Number__c.field-meta.xml
<CustomField>
    <fullName>Fax_Number__c</fullName>
    <label>Fax Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>