force-app/main/default/objects/Refund_Request__c/fields/Fax_Representative__c.field-meta.xml
<CustomField>
    <fullName>Fax_Representative__c</fullName>
    <label>Fax Representative</label>
    <length>40</length>
    <type>Text</type>
</CustomField>