force-app/main/default/objects/Refund_Request__c/fields/Onebox_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Onebox_Email_Address__c</fullName>
    <label>Onebox Email Address</label>
    <type>Email</type>
</CustomField>