force-app/main/default/objects/Refund_Request__c/fields/Onebox_EVR_Number__c.field-meta.xml
<CustomField>
    <fullName>Onebox_EVR_Number__c</fullName>
    <label>Onebox/EVR Number</label>
    <type>Phone</type>
</CustomField>