force-app/main/default/objects/Refund_Request__c/fields/Onebox_EVR_Representative__c.field-meta.xml
<CustomField>
    <fullName>Onebox_EVR_Representative__c</fullName>
    <label>Onebox/EVR Representative</label>
    <length>40</length>
    <type>Text</type>
</CustomField>