force-app/main/default/objects/Refund_Request__c/fields/Reason_for_Credit__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Credit__c</fullName>
    <inlineHelpText>Required if credit amount is entered.</inlineHelpText>
    <label>Reason for Credit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Multiple Billing</fullName>
            </value>
            <value>
                <fullName>Duplicate Account</fullName>
            </value>
            <value>
                <fullName>Representative Error</fullName>
            </value>
            <value>
                <fullName>Dissatisfaction</fullName>
            </value>
            <value>
                <fullName>Special Offer</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Usage Balance</fullName>
            </value>
            <value>
                <fullName>Fraud</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>