force-app/main/default/objects/Refund_Request__c/fields/Requested_Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Requested_Credit_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Requested Credit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>