force-app/main/default/objects/Refund_Request__c/fields/User_Company_Key__c.field-meta.xml
<CustomField>
    <fullName>User_Company_Key__c</fullName>
    <label>User/Company Key</label>
    <length>18</length>
    <type>Text</type>
</CustomField>