force-app/main/default/objects/Refund_Request__c/recordTypes/CS_HLW.recordType-meta.xml
<RecordType>
    <fullName>CS_HLW</fullName>
    <active>true</active>
    <label>CS HLW</label>
</RecordType>