force-app/main/default/objects/Refund_Request__c/recordTypes/CS_International.recordType-meta.xml
<RecordType>
    <fullName>CS_International</fullName>
    <active>true</active>
    <description>CS International</description>
    <label>CS International</label>
</RecordType>