force-app/main/default/objects/Refund_Request__c/recordTypes/CS_Microsites.recordType-meta.xml
<RecordType>
    <fullName>CS_Microsites</fullName>
    <active>true</active>
    <description>CS Microsites</description>
    <label>CS Microsites</label>
</RecordType>