force-app/main/default/objects/Refund_Request__c/recordTypes/CS_Ottawa.recordType-meta.xml
<RecordType>
    <fullName>CS_Ottawa</fullName>
    <active>true</active>
    <label>CS Ottawa</label>
</RecordType>