force-app/main/default/objects/Refund_Request__c/recordTypes/Sfax.recordType-meta.xml
<RecordType>
    <fullName>Sfax</fullName>
    <active>true</active>
    <description>Sfax Refund Request</description>
    <label>Sfax</label>
</RecordType>