force-app/main/default/objects/Refund_Request__c/validationRules/Credit_Reason_must_be_populated.validationRule-meta.xml
<ValidationRule>
    <fullName>Credit_Reason_must_be_populated</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 RecordTypeID__c =&quot;012600000009bWj&quot;,
 Requested_Credit_Amount__c &gt;0,
 ISPICKVAL( Reason_for_Credit__c,&quot;&quot; )
)</errorConditionFormula>
    <errorDisplayField>Reason_for_Credit__c</errorDisplayField>
    <errorMessage>If credit is requested, then Reason for Credit cannot be blank.</errorMessage>
</ValidationRule>