force-app/main/default/objects/Refund_Request__c/validationRules/Refund_Amount_must_be_populated_Micro.validationRule-meta.xml
<ValidationRule>
    <fullName>Refund_Amount_must_be_populated_Micro</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 RecordTypeId = &quot;012600000009beN&quot;,
 
 Requested_Refund_Amount__c =0
)</errorConditionFormula>
    <errorDisplayField>Requested_Refund_Amount__c</errorDisplayField>
    <errorMessage>Requested Refund Amount is required to have an amount.</errorMessage>
</ValidationRule>