force-app/main/default/objects/Refund_Request__c/validationRules/Refund_or_Credit_Amount_must_be_populate.validationRule-meta.xml
<ValidationRule>
    <fullName>Refund_or_Credit_Amount_must_be_populate</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 RecordTypeId = &quot;012600000009bWj&quot;,
 Requested_Credit_Amount__c =0,
 Requested_Refund_Amount__c =0
)</errorConditionFormula>
    <errorDisplayField>Requested_Credit_Amount__c</errorDisplayField>
    <errorMessage>Either Requested Credit Amount or Requested Refund Amount are required to have an amount.</errorMessage>
</ValidationRule>