force-app/main/default/objects/Refund_Request__c/validationRules/Refund_Reason_must_be_populated.validationRule-meta.xml
<ValidationRule>
    <fullName>Refund_Reason_must_be_populated</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 RecordTypeID__c =&quot;012600000009bWj&quot;,
 Requested_Refund_Amount__c &gt;0,
 ISPICKVAL( Reason_for_Refund__c,&quot;&quot; )
)</errorConditionFormula>
    <errorDisplayField>Reason_for_Refund__c</errorDisplayField>
    <errorMessage>If refund is requested, then Reason for Refund cannot be blank.</errorMessage>
</ValidationRule>