force-app/main/default/objects/Refund_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer_Name__c</columns>
    <columns>Date__c</columns>
    <columns>Requested_Refund_Amount__c</columns>
    <columns>Reason_for_Refund__c</columns>
    <columns>Onebox_EVR_Representative__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>